[package]
name = "ota-verify"
version = "0.1.0"
edition = "2021"
description = "OTA update package verifier for embedded device firmware"
license = "MIT"
authors = ["isecwire GmbH"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
