[package]
name = "ota-verify"
version = "1.0.0"
edition = "2021"
description = "OTA update package verifier for embedded device firmware"
license = "MIT"
authors = ["isecwire GmbH"]

[dependencies]
clap = { version = ">=4, <4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
rand = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
colored = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
